FEAT-add wildfly 10 images