@@ -40,6 +40,8 @@ MAX=45
 
 if [ ! -f /init-service-ok ];
 then
+    useradd -m $CU_USER && echo "$CU_USER:$CU_PASSWORD" | chpasswd && echo "root:$CU_PASSWORD" | chpasswd
+	usermod -s /bin/bash $CU_USER
 	$JBOSS_HOME/bin/add-user.sh --silent=true $CU_USER $CU_PASSWORD
 	echo  "CU_USER=$CU_USER" >> /etc/environment
 	echo  "CU_PASSWORD=$CU_PASSWORD" >> /etc/environment
@@ -48,10 +50,12 @@ then
 	echo  "JAVA_HOME=$JAVA_HOME" >> /etc/environment
 	echo  "PATH=$JAVA_HOME/bin:$PATH" >> /etc/environment
 	echo  "JBOSS_HOME=$CU_HOME/wildfly" >> /etc/environment
-	echo  "JAVA_OPTS=-Xms96m -Xms512m -Xmx512m -XX:MetaspaceSize=96M -XX:MaxMetaspaceSize=256m -Djava.net.preferIPv4Stack=true -Djboss.modules.system.pkgs=$JBOSS_MODULES_SYSTEM_PKGS -Djava.awt.headless=true" >> /etc/environment
+	echo  "JAVA_OPTS=-Xms512m -Xmx512m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true -Djboss.modules.system.pkgs=$JBOSS_MODULES_SYSTEM_PKGS -Djava.awt.headless=true " >> /etc/environment
 fi
 
 source /etc/environment
+/usr/sbin/sshd
+chown -R $CU_USER:$CU_USER /cloudunit/appconf/wildfly
 /cloudunit/scripts/cu-start.sh
 RETURN=$?
 
